// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image Component base should return a Image object with a console error 1`] = `
.c0 {
  max-width: 100%;
  width: 100%;
}

<Img
  alt=""
  className="c0"
  container={[Function]}
  decode={true}
  loader={false}
  src="https://images.pexels.com/photos/67636/rose-blue-flower-rose-blooms-67636.jpeg"
  unloader={false}
/>
`;

exports[`Image Component base should return a Image object with maxWidth applied 1`] = `
.c0 {
  max-width: 200px;
  width: 100%;
}

<Img
  alt="blue flower"
  className="c0"
  container={[Function]}
  decode={true}
  loader={false}
  src="https://images.pexels.com/photos/67636/rose-blue-flower-rose-blooms-67636.jpeg"
  unloader={false}
/>
`;

exports[`Image Component base should return a Image object with width applied 1`] = `
.c0 {
  width: 100%;
  max-width: 100%;
}

@media screen and (min-width:40em) {
  .c0 {
    width: 75%;
  }
}

@media screen and (min-width:52em) {
  .c0 {
    width: 66.66666666666666%;
  }
}

@media screen and (min-width:64em) {
  .c0 {
    width: 50%;
  }
}

<Img
  alt="blue flower"
  className="c0"
  container={[Function]}
  decode={true}
  loader={false}
  src="https://images.pexels.com/photos/67636/rose-blue-flower-rose-blooms-67636.jpeg"
  unloader={false}
/>
`;

exports[`Image Component base should return a shallow Image object with base styling 1`] = `
.c0 {
  max-width: 100%;
  width: 100%;
}

<Img
  alt="blue flower"
  className="c0"
  container={[Function]}
  decode={true}
  loader={false}
  src="https://images.pexels.com/photos/67636/rose-blue-flower-rose-blooms-67636.jpeg"
  unloader={false}
/>
`;
